# htr-paroisses-marseille-2026

./: .gitignore  CONVENTIONS_TRANSCRIPTION.md  DATA_SOURCES.md  MODEL_CARD.md  README.md  pyproject.toml
configs/: kraken_config.yaml  trocr_config.yaml
data/: dataset_hashes.sha256
data/splits/: test.json  train.json  val.json
notebooks/: 01_exploration_corpus.ipynb  02_preprocessing_demo.ipynb  03_baseline_eval.ipynb  04_results_analysis.ipynb
scripts/: create_splits.py  download_GG1.py  download_corpus.py  filter_covers.py  run_download_GG1.py  split_pages.py
src/: __init__.py
src/evaluation/: __init__.py  iou.py  mcnemar.py  metrics.py
src/htr/: __init__.py  aggregation.py  kraken_model.py  trocr_model.py
src/preprocessing/: __init__.py  deskew.py  enhance.py  pipeline.py
src/segmentation/: __init__.py  layout.py  line_seg.py  polygon_export.py
src/utils/: __init__.py  data_contract.py  downloader.py  logger.py  seeds.py
tests/: __init__.py  test_data_contract.py  test_metrics.py  test_preprocessing.py  test_regression_cer.py
