[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "htr-paroisses-marseille"
version = "0.1.0"
description = "HTR sur les registres paroissiaux et recensements des Archives Municipales de Marseille"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Équipe HTR HETIC 2026" },
]

dependencies = [
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "peft>=0.10.0",
  "datasets>=2.19.0",
  "kraken>=5.2.0",
  "opencv-python>=4.9.0",
  "scikit-image>=0.22.0",
  "editdistance>=0.8.1",
  "jsonschema>=4.22.0",
  "pillow>=10.3.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
